--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "getting-started-2",
   "version": "1.0.0",
   "private": true,
-  "description": "WordPress Headless Getting Started Template",
+  "description": "WordPress Headless Getting Started PAGE",
   "main": "index.js",
   "scripts": {
     "build": "next build",
