--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "getting-started-2",
+  "name": "getting started",
   "version": "1.0.0",
   "private": true,
   "description": "WordPress Headless Getting Started PAGE",
